final css details. Right container overflow fixed

--- a/style.css
+++ b/style.css
@@ -19,13 +19,13 @@ textarea {
 body {
     display: flex;
     width: 100%;
-    height: 100vh;    
+    min-height: 100vh;
 }
 .left-container {
     width: 30%;
-    height: 100%;
     background-image: url('./images/stefanie-jockschat-SFP-eOweXHE-unsplash.jpg');
     background-size: cover;
+    min-height: 100vh;
 }
 
 .logo-container {
@@ -56,22 +56,24 @@ body {
     flex-direction: column;
     justify-content: space-evenly;
     gap: 20px;
+    min-height: 100vh;
 }
 
-.description, .create-login {
+.description, .login {
     margin: 0 4%;
 }
 
 
 .description > p  {
-    font-size: 1.5rem;
+    font-size: 1.4em;
     font-weight: bold;
-    margin-top: 20px;
+    margin: 20px 30% 0 0;
 }
 
 legend { 
-    font-size: 1.4rem;
+    font-size: 1.6rem;
     margin-top: 8px;
+    font-weight: bold;
 }
 
 
@@ -96,7 +98,7 @@ form {
     padding: 5px;
     width: 20vw;
     margin-top: 16px;
-    font-size: 10px;
+    font-size: 1.2em;
 }
 
 input {
@@ -105,7 +107,7 @@ input {
     border: 1px solid #ccc;
     border-radius: 5px;
     width: 100%;
-    font-size: 1rem;
+    font-size: 1em;
 }
 
 button { 
@@ -115,7 +117,7 @@ button {
     border-radius: 5px;
     background-color: #2797cf;
     color: white;
-    font-size: .7rem;
+    font-size: 1rem;
     cursor: pointer;
     margin: 0 0 0 4%;
 }
@@ -132,3 +134,11 @@ input:invalid {
     border: 1px solid red;
     box-shadow: 0 0 5px red;
 }
+
+.login > p { 
+    font-size: 1.4rem;
+}
+.login > p > a {
+    color: #2797cf;
+    text-decoration: none;
+} 
